    AVR64DU28 AVR64DU32
  - Added support for AVR-Ex devices:
    AVR16EA28 AVR16EA32 AVR16EA48 AVR16EB14 AVR16EB20 AVR16EB28 AVR16EB32
    AVR32EA28 AVR32EA32 AVR32EA48 AVR64EA28 AVR64EA32 AVR64EA48
  - Added support for Reduced Tiny devices:
    ATiny102 ATtiny104
  - Added support for Classic devices:
    ATmega168PB ATmega328PB ATmega324PB

  - Added support for: strndup.

  - The delay routines no more include math.h but use built-in functions
    __builtin_fabs and __builtin_ceil instead of fabs and ceil.  This means
    the delay roudines are now independent of -f[no-]freestanding.

  - Added inline functions to read from progmem that return a type as
    indicated by the function name, like char pgm_read_char (const char*).
    The functions adjust to -mint8, -mdouble= and -mlong-double=.
    Functions for fixed-width types are pgm_read_i64, pgm_read_u24, etc.
    * Functions that read from beyond 64 KiB are suffixed _far and take
      an uint_farptr_t as argument.
    * pgm_read_float has been turned from a macro that takes uint16_t to
      an inline function that takes const float*.
    * pgm_read_byte, pgm_read_word and pgm_read_dword remain as they were
      and still take an uint16_t argument for compatibility and legacy code.

  - Added experimental templates pgm_read<> and pgm_read_far<>.  They are
    only available when macro __pgm_read_template__ is defined.

  - Added EEPROM support for: double, long double, uint64_t (*_qword).

* Issues closed:

  - [patch #9543] Add avrxmega3 devices. #824
  - [bug #49567] Use meta-info from --print-multi-lib and
    --print-multi-directory #642
  - [bug #57071] Fix math.h and function names that block 64-bit
    double #670
  - Issue #476 [bug #32945] RAMPZ clobbered in far-pointer library.
    Functions from the far-pointer library in libc/pmstring like
    memcpy_PF that read from program memory using ELPM must set
    RAMPZ to the high byte of the 24-bit address.  On devices that