@@ -82,17 +82,23 @@
 #define _MemoryBarrier() __asm__ __volatile__("":::"memory")
 #endif  /* __DOXYGEN__ */
 
-/**
-   \ingroup avr_cpufunc
-
-   Write \a __value to Configuration Change Protected (CCP) IO register
-   at \a __ioaddr.
- */
 #ifdef __cplusplus
 extern "C" {
 #endif
 
+/**
+   \ingroup avr_cpufunc
+
+   Write \a __value to IO Register Protected (CCP) IO register
+   at \a __ioaddr.  . See also \c _PROTECTED_WRITE().  */
 void ccp_write_io (volatile uint8_t *__ioaddr, uint8_t __value);
+
+/**
+   \ingroup avr_cpufunc
+
+   Write \a __value to SPM Instruction Protected (CCP) IO register
+   at \a __ioaddr. See also \c _PROTECTED_WRITE_SPM().  */
+void ccp_write_spm (volatile uint8_t *__ioaddr, uint8_t __value);
 
 #ifdef __cplusplus
 }
