@@ -55,6 +55,7 @@ dev_c_sources =
 
 dev_asm_sources = \
 	flmap_init.S \
+	ccp_write_spm.S \
 	ccp_write.S
 
 misc_a_asm_sources = \
